# easy-devops-tutorial

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.iac.yml  docker-compose.infra.yml  docker-compose.yml
.github/workflows/: frontends.yml  infrastructure-main.yml  infrastructure-pull-request.yml  infrastructure-simulate-deploy.yml  proto.yml  service-a.yml  service-b.yml  service-c.yml
docs/: API.md  ARCHITECTURE.md  INFRASTRUCTURE.md  OVERALL.md
infrastructure/: README.md
infrastructure/ansible/: README.md  ansible.cfg
infrastructure/puppet/: README.md  hiera.yaml
infrastructure/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
services/common/: buf.gen.yaml  buf.yaml  dependencies.md
services/frontend-a/: Dockerfile  dependencies.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
services/frontend-b/: Dockerfile  dependencies.md  package-lock.json  package.json  vite.config.ts
services/frontend-c/: Dockerfile  dependencies.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
services/service-c/: .coverage  Dockerfile  README.md  dependencies.md  pyproject.toml
services/service-c/src/: config.py  consumer.py  main.py  message_format.py
services/service-c/src/service_c.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/service-c/tests/: test_config.py  test_consumer.py  test_message_format.py
(+187 files in other folders)
